[package]
name = "plonkish-acc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.3", package = "halo2curves" }
rand_core = "0.6.4"
num-bigint = "0.4.3"
num-integer = "0.1.45"

